Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/7022054/T7022054pos2.out
T7022054pos2.java:15:32: compiler.err.name.clash.same.erasure.no.hide: <X>m(java.lang.String), T7022054pos2.B, m(java.lang.String), T7022054pos2.A
1 error
